--- a/index.html
+++ b/index.html
@@ -1,52 +1,350 @@
+<!Doctype>
+<html>
+ <head>
+  <title>KASHIF RAZA</title>
+  <link rel="stylesheet" href="jquery-ui/jquery-ui.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <script src="jquery-ui/external/jquery/jquery.js"></script>
+  <script src="jquery-ui/jquery-ui.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style type="text/css">
+  html{
+   scroll-behavior: smooth;
+  }
+   #myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color:SlateGray ;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50%;
+  }
 
-<!doctype html>
-
-<html lang="en">
-
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
-	<style type="text/css">
-	 input{
-	  margin-bottom: 0.7vh;
-	  width: 300px;
-	 }
-	</style>
-  </head>
+  #myBtn:hover {
+  background-image: linear-gradient(-45deg, #86dbf9, #bb72e5);
+  border: 1px solid white;
+  }  
+  #topheader{
+    background-image:linear-gradient(to bottom, #122147,#122147,#1b3168);
+    height: 650px;	
+	width: 100%;
+   }
+   #headtext{
+    color: white;
+	font-family: Bahnshrift, sans-serif;
+	font-size: 55px;
+	padding-top: 100px;
+	padding-left: 33%;
+	font-stretch: 10%;
+	
+   }
+   #headname{
+    text-decoration: none;
+	color: #bc0d4a;
+   }
   
-  <body>
-    <div class="container">
-	    <form>
-		  <fieldset class="form-group row">
-		   <label for="email" class="col-sm-2">Email Address</label>
-		   <div class="col-sm-10">
-		    <input id="email" type="email" class="form-control">
-		   </div>
-		  </fieldset> 
-		  <fieldset class="form-group row">
-		   
-		   <label for="password" class="col-sm-2">Password</label>
-		   <div class="col-sm-10">
-		   <input id="password" type="password" class="form-control">
-		   </div>
-		  </fieldset> 
-		  <fieldset class="form-group row">
-		  <div class="col-sm-10">
-		   <button type="submit" class="btn btn-secondary">Submit</button>
-		  </div>
-		  </fieldset> 
-		</form>
+   #headname:hover{
+    font-weight: bold;
+	color:white;
+	font-size:57px;
+   }
+   body{
+    padding: 0;
+	margin: 0;
+   }
+   #projectlink{
+	margin-left: 45%;
+	font-family: sans-serif;
+	font-size: 28px;
+	
+   }
+   #myprojectontop{
+	color:#237be0;
+	background-color: white ; 
+	text-decoration: none;
+	padding: 5px;
+   }
+   #myprojectontop:hover{
+	font-size: 28.2px;
+	background-color: #237be0;
+	color: white;
+	border-radius: 1px;
+	border: 2px solid white;
+   }
+   #aboutme{
+    background-image: linear-gradient(-45deg, #86dbf9, #bb72e5);
+	padding: 0;
+	margin:  0;
+	width: 100%;
+	height: 650px;
+	position: relative;
+   }
+   
+   ul{
+    margin: 0px;
+	padding: 0px;
+	color: white;
+	display: flex;
+	
+   }
+   li {
+    list-style: none;
+	margin-left: 12%;
+	margin-right: 12%;
+	margin-top: 90px;
+	
+   }
+   li a{
+    text-decoration: none;
+	font-family: Bahnshrift, sans-serif;
+	font-size: 1.8em;
+	color: white;
+   }
+   li a:hover{
+    color:#37abe5;
+   }
+   .active{
+    color: brown;
+   }
+   #aboutmeheading{
+    font-size: 35px;
+	font-family: Courier, sans-serif;
+	font-weight: bold;
+	color: white;
+	text-align: center;
+	margin: 0px;
+	padding-top: 5px;
+	border-top: 6px solid Gray;
+	
+   }
+   #myprojects{
+    width: 100%;
+	height: 650px;
+	background-color: #ffeae5;
+	margin: 0;
+	padding: 0;
+	position: relative;
+	border-top: 3px solid #FFAB68;
+   }
+   #muprojecttitle{
+    text-align: center;
+	font-family: Ink Free, sans-serif;
+	font-size: 38px;
+	margin-top: 0px;
+	padding-top: 5px;
+	font-weight: bold;
+	color:#071477;
+	
+   }
+   #mydetail{
+    height: 460px;
+	width: 40%;
+	margin: 12px;
+	padding: 5px;
+	background-color: white;
+	font-family: sans-serif;
+	font-weight: bold;
+	font-style: italic;
+	opacity: 0.8;
+	border-radius: 12px;
+	margin-right: 7%;
+	float: left;
+	text-align: center;
+	
+	box-shadow: 10px 10px 5px gray;
+   }
+   #myimg{
+    height: 220px;
+	margin-left:  21%;
+	margin-right: 25%;
+	width: 50%;
+	margin-top: 18px;
+	border-radius: 15px;
+	box-shadow: 6px 6px 8px Gray;
+   }
+   #rankbottomtxt{
+    font-size: 1.2em;
+   }
+	   .checked {
+	  color: orange;
+	}
+	.logo{
+	 height: 80px;
+	 width: 95px;
+	 margin-left: 10px;
+	 float: left;
+	}
+	
+	.fa{
+	 margin-top: 10px;
+	 float: left;
+	}
+   #mytext{
+    height: 460px;
+	width: 43.5%;
+	margin: 12px;
+	padding: 5px;
+	background-color: white;
+	opacity: 0.8;
+	border-radius: 12px;
+	float: left;
+	box-shadow: 10px 10px 5px gray;
+   }
+   #mythought{
+    font-family: Lobster, cursive;
+	font-size: 1.9em;
+	color: Gold;
+	text-align: center;
+   }
+   #academic{
+    font-family: open sans, sans-serif;
+	font-size: 1.4em;
+	margin-left: 5px;
+   }
+   #collegename{
+    margin-top: 15px;
+	font-family: Noto-serif;
+	font-weight: bold;
+	font-size: 1.6em;
+   }
+		.flip-card {
+	  background-color: transparent;
+	  width: 200px;
+	  height: 200px;
+	  perspective: 1000px;
+	  font-family:Ink Free;
+	  margin: auto;
+	}
+
+	.flip-card-inner {
+	  position: relative;
+	  width: 200px;
+	  height: 200px;
+	  text-align: center;
+	  transition: transform 0.6s;
+	  transform-style: preserve-3d;
+	  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	
+	}
+
+	.flip-card:hover .flip-card-inner {
+	  transform: rotateY(180deg);
+	}
+
+	.flip-card-front, .flip-card-back {
+	  position: absolute;
+	  width: 200px;
+	  height: 200px;
+	  -webkit-backface-visibility: hidden;
+	  backface-visibility: hidden;
+	  border-radius: 8px;
+	}
+
+	.flip-card-front {
+	  background-color: #842d78;
+	  color: black;
+	  font-family:Ink Free;
+	
+	}
+
+	.flip-card-back {
+	  background-color: #842d78;
+	  color: white;
+	  transform: rotateY(180deg);
+	  font-family:Ink Free;
+	  border-radius: 8px;
+	}
+  </style>
+ </head>
+ <body>
+   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+   <div id="topheader">
+   
+	 <p id="headtext">Hi! There,<br>
+	 I am <a href="#aboutme" id="headname">KASHIF RAZA</a><br>
+	 Welcome to My Web-Portfolio</p>
+	 <div id="projectlink"><a href="#myprojects" id="myprojectontop">My Projects</a></div>
+	 <ul>
+	  <li><a href="#" id="homelink" class="menulink active">Home</a></li>
+	  <li><a href="#aboutme" class="menulink">About Me!</a></li>
+	  <li><a href="#" class="menulink">Contact Me</a></li>
+	 </ul>
+   </div>
+   
+   <div id="aboutme">
+     <div id="aboutmeheading"><p>About Me!</p></div>
+	 
+	 <div id="mydetail">
+		 <div class="flip-card">
+	  <div class="flip-card-inner">
+		<div class="flip-card-front">
+		  <img src="aboutmeimg.jpg" style="width:200px;height:200px;border-radius: 8px;">
+		</div>
+		<div class="flip-card-back">
+		  <h1>KASHIF RAZA</h1> 
+		  <p>Engineering Student</p> 
+		  <p><i>Blader of the Four Season!</i></p>
+		</div>
+	  </div>
 	</div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  </body>
+	   <p>My Rankings as a</p><span id="rankbottomtxt"><p>'Competetive Programmer'</p></span><br>
+	   <img src="hackerranklogo.png" title="Hacker Rank" class="logo"><br>
+	   <span class="fa fa-star checked"></span>
+		 <span class="fa fa-star checked"></span>
+		 <span class="fa fa-star"></span>
+		 <span class="fa fa-star"></span>
+		 <span class="fa fa-star"></span><br><p>More are coming...</p>
+	   
+	 </div>
+	 <div id="mytext">
+	  <div id="mythought"><p></p></div>
+	  <p id="academic">Currently Pursuing:<br><strong>Bachelor's Degree in Engineering (B.E)</strong> from:<br></p>
+	  <img src="ietlogo.png" height="100px" width="125px" align="left" title="IET-DAVV, Indore">
+	  <p id="collegename">Institute of Engineering & Technology, Indore</p>
+	 </div>
+   </div>
+   
+   
+   <div id="myprojects">
+    <div id="muprojecttitle"><p>My Project Work</p></div>
+   </div>
+   
+   
+   
+ <script type="text/javascript">
+	   //For Scroll To Top Button
+	var mybutton = document.getElementById("myBtn");
+
+	window.onscroll = function() {scrollFunction()};
+
+	function scrollFunction() {
+	  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+		mybutton.style.display = "block";
+	  } else {
+		mybutton.style.display = "none";
+	  }
+	}
+
+	function topFunction() {
+	  document.body.scrollTop = 0;
+	  document.documentElement.scrollTop = 0;
+	}
+	//Back to Top Button Finished!
+	<!--Active link toggleing--!>
+	$(".menulink").click(function(){
+	 $(this).toggleClass("active");
+	 $(this).removeClass("active");
+	});
+	<!-- FOR MY QUOTE!--!>
+	document.getElementById("mythought").innerHTML = "&#34Programming is a more Logical way of Expressing Your Ideas Virtually&#34<br>&#8212 Kashif";
+ </script>
+ </body>
+
 </html>
